<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <TextView
        android:text="@string/txt2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/olaHead"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="@string/service_provider_is_ola"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/olaService"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="113dp"
        android:layout_alignTop="@+id/olaHead"
        android:layout_alignStart="@+id/olaHead"
        android:layout_marginStart="12dp"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="@string/txt"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/olaDetails"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@+id/olaService"
        android:layout_alignStart="@+id/olaHead"
        android:layout_marginTop="46dp"
        android:textColor="@android:color/background_light" />

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/olaOk"
        android:layout_below="@+id/olaDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@android:color/holo_green_light"
        android:onClick="okay" />

</RelativeLayout>