<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_send_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aditya.sample.SendText"
    android:background="@android:color/background_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:id="@+id/textView"
        android:text="@string/rash"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/complaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:id="@+id/textView3"
        tools:textColor="@android:color/background_light"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textAlignment="center" />

    <Button
        android:text="@string/yes_i_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="55dp"
        android:id="@+id/button4"
        android:background="@android:color/holo_green_light"
        android:onClick="yes_ido" />

    <Button
        android:text="@string/no_i_dont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button4"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginEnd="28dp"
        android:id="@+id/button5"
        android:background="@android:color/holo_red_dark"
        android:onClick="no_idont" />
</RelativeLayout>
